# php-re2

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LRUPatternCache.cpp  LRUPatternCache.h  README.md  config.m4  php_re2.h  re2.cpp  re2.stub.php  re2_arginfo.h
.github/workflows/: ci.yml
cmake/: Findre2.cmake
tests/: basic-captures.phpt  basic-match.phpt  cache-resize.phpt  cache.phpt  invalid-pattern.phpt  quote.phpt
tests/unit/: CMakeLists.txt  LRUPatternCacheTest.cpp
